--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.2",
     "autoprefixer": "^10.2.4",
+    "cssnano": "^4.1.10",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.3"
